--- a/src/blocks/slider-main/slider-main.pug
+++ b/src/blocks/slider-main/slider-main.pug
@@ -38,7 +38,7 @@ mixin slider-main(props, mods)
     .slider-main__inner
       .slider-main.slider(class=allMods)&attributes(attributes)
         block
-      +cart('has-goods')(class="xl_hidden")
+      // +cart('has-goods')(class="xl_hidden")
 
 mixin slider-item(props)
 
