--- a/src/pages/addClasses.pug
+++ b/src/pages/addClasses.pug
@@ -1,2 +1,6 @@
 .opacity-100
-<div class='!opacity-100 lg_!hidden'></div>
+<div class='!opacity-100 lg_!hidden !text-black'></div>
+.w-300px
+.w-200px
+.w-600px
+.grid-cols-2-300px
