--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -198,6 +198,19 @@ block content
             li <b>Лабораторные тесты.</b> При наличии острого воспаления сустава во время проведения клинического анализа крови выявляют признаки активной воспалительной реакции. Характерно увеличенное СОЭ, растет число лейкоцитов. При выполнении биохимического анализа крови находят воспалительные маркеры, к которым относят С-реактивный белок (СРБ), ревматоидный фактор, серомукоид. При выполнении иммунологического анализа находят антитела к определенному возбудителю инфекции.
             li <b>Методы визуализации.</b> На рентген-снимках сустава видны отверстия в суставных поверхностях, через которые выходит гной в костную ткань. Еще при заболевании сужается суставная щель. Выявляется костное или фиброзное заращение сустава. Чтобы провести дифференциальную диагностику при артритах, проводят МРТ. Определение характера и количества внутрисуставной жидкости производят при помощи УЗИ. Вспомогательное значение имеют термография, пневмоартрография и контрастная артрография.
             li <b>Инвазивные исследования.</b> Проводится диагностическая пункция сустава с дальнейшим изучением синовиальной жидкости. Если необходимо, проводят артроскопию или биопсию синовиальных оболочек.
+              ul
+                li Пример 1
+                li Пример 1
+                li Пример 1
+                li Пример 1
+                  ul
+                    li Пример 1
+                    li Пример 1
+                    li Пример 1
+                    li Пример 1
+                    li Пример 1
+            li <b>Инвазивные исследования.</b> Проводится диагностическая пункция сустава с дальнейшим изучением синовиальной жидкости. Если необходимо, проводят артроскопию или биопсию синовиальных оболочек.
+            li <b>Инвазивные исследования.</b> Проводится диагностическая пункция сустава с дальнейшим изучением синовиальной жидкости. Если необходимо, проводят артроскопию или биопсию синовиальных оболочек.
           p Исчерпывающая диагностическая информация о причинах поражения сустава позволяет врачу подобрать оптимальный лечебный комплекс.
           .article__note.bg-red-50.mt-20px.mb-40px(class='lg_grid lg_grid-cols-[auto_1fr] lg_gap-x-20px lg_text-left')
             .article__note-icon.icon-svg.icon-svg--info-thin-red
@@ -425,6 +438,9 @@ block content
             .article__note-icon.icon-svg.icon-svg--laser-device
             //- +svg('laser-device','',{width:46,height:47})(class='article__note-icon')
             p(class='!mb-0') Сейчас лазеротерапию делают не только с помощью громоздких аппаратов для медицинских учреждений. Теперь не нужно ходить в поликлинику, возможно лечение артрита колена в домашних условиях с помощью портативных аппаратов. Их регулярное применение улучшает функционирование коленного сустава.
+          h2 Тест
+            .img-test
+              img(src='/img/arthrit_800x400.jpg')
           h2#prof Профилактика
           .grid.grid-cols-2.gap-x-20px.mb-20px
             .article__img.img-cover.h-100px(class='lg_h-[248px]')
@@ -478,12 +494,12 @@ block content
                     a.article__contents-link(href='#' data-anchor='#prof') Профилактика
               // .banner__wrapper.article__banner
               //   .banner Баннер
-              // +consult({
-              //   url: '/img/author_87x87.jpg',
-              //   name: 'Иван Фабричный',
-              //   text: 'Врач кардиолог',
-              //   phone: '8 800 200 57 30'
-              // })(class='article__consult')
+              +consult({
+                url: '/img/author_87x87.jpg',
+                name: 'Иван Фабричный',
+                text: 'Врач кардиолог',
+                phone: '8 800 200 57 30'
+              })(class='article__consult')
 
         .article__socials.lg_justify-self-start
           .text-lg.text-black.text-center.mb-7px Поделиться в соц. сетях
