--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -220,6 +220,8 @@ block prepend page-bottom
   script(src='https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=bd455aa8-6a1c-4570-a04d-5a21c9e76f7e')
   script.
     function test() {console.log('test');}
+  script(src='js/catalog.js')
+
 
 
 
