--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -32,7 +32,8 @@ block content
   .wrapper
     //- +pages
     #bx_basketFKauiI.bx-basket.bx-opener
-      +cart-aside(class='hidden xl_block')
+      +cart-aside
+    +scroll-btn
     .main
       section.section.section-main.section--main-slider.bg-gray-100(data-page='main-slider' id='main-slider')
         +slider-main({class: "4xl_container"})
