--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -57,11 +57,12 @@ $tw-blue-100: #dbeafe;
 $tw-blue-200: #bfdbfe; 
 $tw-blue-300: #93c5fd; 
 $tw-blue-400: #60a5fa; 
-$tw-blue-500: #3b82f6; 
+$tw-blue-500: #3F28CF; 
 $tw-blue-600: #2563eb; 
 $tw-blue-700: #1d4ed8; 
 $tw-blue-800: #196f93; 
 $tw-blue-900: #0075DA; 
+$tw-blue-1000: #007CD3; 
 $tw-blue_link: #007CD3; 
 $tw-indigo: undefined; 
 $tw-violet: undefined; 
