--- a/src/blocks/field-toggler/field-toggler.scss
+++ b/src/blocks/field-toggler/field-toggler.scss
@@ -38,8 +38,16 @@
     padding-left: 3.2em;
     margin-right: 0.6em;
     font-weight: 400;
-    line-height: $line-height;
+    line-height: 28px;
     cursor: pointer;
+
+    .profile & {
+      margin-right: 0;
+
+      @media (min-width: $screen-lg) {
+        @apply text-lg;
+      }
+    }
   }
 
   &__name-text {
