--- a/src/blocks/news/news.scss
+++ b/src/blocks/news/news.scss
@@ -18,7 +18,7 @@
 
     @media (min-width: $screen-lg) {
       grid-template-columns: auto 1fr auto;
-      grid-template-rows: auto auto 1fr auto;
+      grid-template-rows: auto auto auto 1fr;
       padding-bottom: 40px;
       border-bottom: 1px solid $tw-gray-200;
     }
@@ -28,6 +28,7 @@
       grid-column-start: 1;
       grid-column-end: 2;
       justify-self: start;
+      align-self: end;
 
       @media (min-width: $screen-lg) {
         grid-column-start: 2;
@@ -122,6 +123,14 @@
       grid-column-start: 2;
       grid-column-end: 3;
       margin-top: 10px;
+    }
+
+    a {
+      &:hover,
+      &:focus,
+      &:active {
+        opacity: 0.7;
+      }
     }
   }
 
