--- a/src/pages/cart.pug
+++ b/src/pages/cart.pug
@@ -144,7 +144,7 @@ block content
                 <div class="bx-soa-pp-item-container">
                   <div id="bx_soa_item_delivery_id_27" class="bx-soa-pp-company bx-selected">
                     <div class="bx-soa-pp-company-inner-block">
-                      <div class="bx-soa-pp-company-graf-container has-delivery-cost"><input id="ID_DELIVERY_ID_27" name="DELIVERY_ID" type="checkbox" class="bx-soa-pp-company-checkbox" value="27"><span class="style-checkbox"></span>
+                      <div class="bx-soa-pp-company-graf-container has-delivery-cost"><input id="ID_DELIVERY_ID_27" name="DELIVERY_ID" type="checkbox" class="bx-soa-pp-company-checkbox" value="27" checked><span class="style-checkbox"></span>
                         <div class='cart-page__cost'>
                           <div class="bx-soa-pp-company-smalltitle"><span>Доставка курьером</span></div>
                           <div class="bx-soa-pp-delivery-cost"><span>500 ₽</span></div>
