--- a/src/pages/cure.pug
+++ b/src/pages/cure.pug
@@ -279,7 +279,7 @@ block content
                   img.lazyload(data-src="img/article-1.jpg")
                 .article-preview__text.xxl_pt-30px
                   .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
-                  .article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
+                  a.article-preview__title.mb-10px.text-lg.text-black(class="min-h-[56px]" href="#") Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                   .article-preview__content.xxl_flex-grow.xxl_overflow-hidden.xxl_w-full.xxl_mb-30px
                     .article-preview__content-inner.text-base.text-gray-500.max-h-full.article-preview__ellipsis--cure.xl_pr-10px(data-lines='3') Рожистое воспаление, рожа (erysipelas – от греч. erythros «красный» и pella«кожа») – инфекционное заболевание, вызываемое бета-гемолитическим стрептококком группы А,  протекающее в острой или хронической форме. В России встречается 10-12 случаев на 10 000 населения. Рожей в основном страдают люди старше 60 лет, причем женщины болеют чаще мужчин.
                   +btn('Подробнее','simple')(class="text-md mt-10px")
