--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -80,7 +80,7 @@ html(class='page no-js', lang='ru')
             .page-footer__address.mt-7px 111020, г. Москва, <br class="hidden xxl_block"/>ул. Боровая, д. 7, стр. 7.
             .page-footer__socials.flex.justify-between.mt-24px
               <div class='ya-share2' data-curtain data-services='vkontakte,odnoklassniki,telegram,viber,whatsapp'></div>
-              +social-icon({icon: 'mail', url: 'mail.ru', w: '22', h: '19'})(class="page-footer__social-icon")
+              // +social-icon({icon: 'mail', url: 'mail.ru', w: '22', h: '19'})(class="page-footer__social-icon")
           .page-footer__disclaim.xxl_mt-115px
             div.mt-12px.md_mt-0.text-15.xxl_text-2xl.opacity-30 ВСЯ ИНФОРМАЦИЯ, РАЗМЕЩЕННАЯ НА САЙТЕ, НОСИТ ОЗНАКОМИТЕЛЬНЫЙ ХАРАКТЕР И НЕ МОЖЕТ СЛУЖИТЬ ЗАМЕНОЙ ОЧНОЙ КОНСУЛЬТАЦИИ ВРАЧА
             div.mt-10px.xxl_mt-5px.text-base Вся представленная на сайте информация, касающаяся наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ.
