--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -2,21 +2,26 @@
 
 // // //all
 
-// html * {
-//   color: red !important;
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
+html * {
+  color: red !important;
+  border-color: red !important;
+  background-color: transparent !important;
+}
 
-// .page-header {
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
+.page-header {
+  border-color: red !important;
+  background-color: transparent !important;
+}
 
-// input,
-// select {
-//   background-color: transparent !important;
-// }
+input,
+select {
+  background-color: transparent !important;
+}
+
+
+////personal
+
+
 
 // .cart-product__img {
 //   outline: 1px solid red;
