--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -96,7 +96,7 @@
     top: -1770px; //animation page
     top: -47px; //contacts wide
     top: -6px; //contacts mobile
-    top: -0;
+    top: -0px;
     left: 0; //product.jpg
     // top: -252px;
     // top: -58px;
@@ -107,7 +107,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    content: url('../screens/order-page.jpg');
+    // content: url('../screens/device-page.jpg');
     opacity: 1;
   }
 
