--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -423,7 +423,16 @@ block content
             //-  +svg('laser','',{width:50,height:32})(class='article__note-icon !mb-30px stroke-green-300 fill-green-300 text-green-300')
             p(class='!mb-0') Лазеротерапия эффективна при различных формах заболевания. Метод успешно используют при ревматоидном, подагрическом, посттравматическом и других артритах.
           .text-lg.text-black.mb-20px.lg_text-xl Эта терапия имеет следующие преимущества:
-          ul.mb-30px
+          .article__img.img-cover.h-200px.lg_mr-20px(class='lg_h-[306px] lg_w-[416px] lg_ml-32px lg_float-left')
+            img.lazyload(
+            data-sizes="auto",
+            data-src='/img/arthrit_320x160.jpg',
+            data-srcset='/img/arthrit_320x160.jpg 360w, '  +
+                    '/img/arthrit_480x240.jpg 361w, ' +
+                    '/img/arthrit_800x400.jpg 481w, ' +
+                    '/img/article-2_864x346.jpg 801w '
+            )
+          ul.mb-30px.list-test
             li активизируется обмен веществ в тканях сустава;
             li ускоряется течение химических реакций;
             li снижается болезненность и отек сустава;
@@ -468,12 +477,18 @@ block content
           p Для поддержания устойчивой ремиссии и недопущения развития обострений артрита коленных суставов важно добросовестное выполнение рекомендаций врача. Стоит пересмотреть рацион. Ешьте свежие овощи и фрукты, богатые витаминами и клетчаткой. Надо ограничить потребление животных жиров.
           p Откажитесь от вредных привычек. Важно исключить прием алкоголя и курение табака. Нужно вылечивать все воспалительные заболевания. Особенно это касается острых инфекций. Стоит вести активный образ жизни. Нужно заниматься специально разработанными упражнениями для суставов. Нагрузки подбирают, учитывая возраст, степень и форму заболевания.
           p Успешное лечение воспалительного процесса в коленных суставах зависит от своевременного обращения за медицинской помощью и строгого выполнения врачебных рекомендаций.
-          .border.border-gray-200.rounded-10px.p-30px.mt-40px.mb-40px.lg_pt-40px.lg_mb-60px
-            h3.mt-0 Список литературы:
-            ol.text-lg.p-0.lg_pl-20px
-              li(class='before_!font-normal !mb-10px') Клинические рекомендации. Ревматология/ под. ред. Е. Л. Насонова. М.: ГЭОТАР-Медиа, 2006. 288 с.
-              li(class='before_!font-normal !mb-10px') Артриты и артрозы. Диагностика, профилактика, лечение / Ж.А. Ржевская, Е.А. Романова. - М.: Мир Книги Ритейл, 2011. - 160 c.
-              li(class='before_!font-normal') Частота поражений крупных суставов у взрослых. / К.И. Шапиро. Диагностика и лечение повреждений крупных суставов. / Л.,199 : 3–8.
+          // .border.border-gray-200.rounded-10px.p-30px.mt-40px.mb-40px.lg_pt-40px.lg_mb-60px
+          //   h3.mt-0 Список литературы:
+          //   ol.text-lg.p-0.lg_pl-20px
+          //     li(class='before_!font-normal !mb-10px') Клинические рекомендации. Ревматология/ под. ред. Е. Л. Насонова. М.: ГЭОТАР-Медиа, 2006. 288 с.
+          //     li(class='before_!font-normal !mb-10px') Артриты и артрозы. Диагностика, профилактика, лечение / Ж.А. Ржевская, Е.А. Романова. - М.: Мир Книги Ритейл, 2011. - 160 c.
+          //     li(class='before_!font-normal') Частота поражений крупных суставов у взрослых. / К.И. Шапиро. Диагностика и лечение повреждений крупных суставов. / Л.,199 : 3–8.
+          .sources
+            h3 Список литературы:
+            ol
+              li Клинические рекомендации. Ревматология/ под. ред. Е. Л. Насонова. М.: ГЭОТАР-Медиа, 2006. 288 с.
+              li Артриты и артрозы. Диагностика, профилактика, лечение / Ж.А. Ржевская, Е.А. Романова. - М.: Мир Книги Ритейл, 2011. - 160 c.
+              li Частота поражений крупных суставов у взрослых. / К.И. Шапиро. Диагностика и лечение повреждений крупных суставов. / Л.,199 : 3–8.
         .article__aside.hidden.lg_block.lg_col-start-3.lg_row-start-3.lg_row-span-10
           .article__float
             .article__float-container
