--- a/src/pages/devices.pug
+++ b/src/pages/devices.pug
@@ -9,7 +9,7 @@ block meta
 
 block vars
   -
-    var pageName = 'news';
+    var pageName = 'devices';
 
 block content
   .wrapper
@@ -69,7 +69,7 @@ block content
           })
         .profile__main
           h2.mb-20px.mt-20px.text-xl.lg_text-2xl.lg_mt-0 Зарегистрированные аппараты
-          .data-table.data-table--one-line.mb-20px
+          .data-table.data-table--one-line.data-table--devices.mb-20px
             .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
               span Модель
             .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
@@ -86,7 +86,7 @@ block content
               span 24.02.2023
             .data-table__td.row-start-4.lg_row-start-2(class='lg_!col-start-4')
               span Гарантийный<br>14.01.2022
-          .data-table.data-table--one-line
+          .data-table.data-table--one-line.data-table--devices
             .data-table__th.row-start-1.lg_row-start-1(class='lg_!col-start-1')
               span Модель
             .data-table__th.row-start-2.lg_row-start-1(class='lg_!col-start-2')
