--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -257,5 +257,31 @@ div.bx-basket:not(#tanais-basket-root) {
 }
 
 
+#bx-soa-tanais-order-form .bx-soa-custom-label {
+  display: block;
+  .bx-authform-starrequired {
+    // order: -2;
 
+    &~a {
+      padding-left: 5px;
+      font-size: 14px !important;
+      font-weight: 700;
+      text-decoration: underline;
+      // order: -2 !important;
+      &:hover,
+      &:focus,
+      &:active {
+        text-decoration: none;
+      }
+    }
+  }
 
+}
+
+#bx-soa-properties .bx-soa-customer-field:last-child {
+  display: flex;
+
+  .soa-property-container {
+    order: -2;
+  }
+}
